# animation

./: ReadMe.md
Project1_Skeleton/: CMakeLists.txt  ReadMe.md  main.cpp
Project1_Skeleton/resources/: mesh.fs  mesh.vs  simple.fs  simple.vs
Project1_Skeleton/src/: GLUtil.h  MeshGL.cpp  MeshGL.h  MeshUtil.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h  create.h  joint.cpp  joint.h  material_colors.h  matlab.h  skeleton.cpp  skeleton.h  tokenizer.cpp  tokenizer.h  transform.h  viewer.cpp  viewer.h  writeOBJ.h
